<resources>
    <string name="app_name">SURVE</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome To SURVE</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="reg_button">CONTINUE</string>
    <string name="example_phone_number">Enter your phone number</string>
    <string name="balance">Balance: </string>
    <string name="my_offers_tab">My Offers</string>
    <string name="earn_tab">Earn</string>
    <string name="spend_tab">Spend</string>
    <string name="account_tab">Account</string>
    <string name="marketplace_button">Go to Marketplace</string>
    <string name="spend_fragment_label">No custom spend offers</string>
    <string name="create_custom_button">Add Offer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
